--- a/src/me/snizzle/gamelauncher/GameLauncher.css
+++ b/src/me/snizzle/gamelauncher/GameLauncher.css
@@ -1,7 +1,7 @@
 .root{
     -fx-font-size: 16pt;
     -fx-font-family: "Courier New";
-    -fx-base: rgb(220, 145, 47);
+    -fx-base: #ff9264;
     -fx-background: rgb(236, 209, 173);
 }
 
