fixed the renderer to make it more efficent and to not rerenderold state while the renderer collects user state. I have an exprt ready to fetch may want to think of moving this into the exporter ready to fetch as well

--- a/src/me/snizzle/scrabble/Scrabble.css
+++ b/src/me/snizzle/scrabble/Scrabble.css
@@ -37,7 +37,7 @@
     -fx-border-width: 3 0 0 0;
     -fx-border-insets: -6 0 0 0;
     -fx-padding: 2;
-    -fx-border-color: #0c586b;
+    -fx-border-color: black;
 }
 
 #tile-letter-text {
