--- a/src/me/snizzle/scrabble/Scrabble.css
+++ b/src/me/snizzle/scrabble/Scrabble.css
@@ -180,3 +180,20 @@
     -fx-font-size: 14px;
     -fx-text-fill: #28ffed;
 }
+
+.dialog-pane {
+    -fx-background-color: #0c586b;
+}
+
+.dialog-pane .label {
+    -fx-text-fill: #28ffed;
+}
+
+.dialog-pane:header .header-panel {
+    -fx-background-color: #0c586b;
+}
+
+.dialog-pane:header .header-panel .label {
+    -fx-font-style: italic;
+    -fx-font-size: 2em;
+}
